# RallpV2_ws

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  README.md  TESTING_GUIDE.md  TORQUE_VECTORING_README.md  app.js  readme_web.md  simple_torque_test.py  standalone_torque_test.py
src/fake_odom_pub/: package.xml  setup.cfg  setup.py
src/fake_odom_pub/fake_odom_pub/: fake_odom_publisher.py
src/navigation/: CMakeLists.txt  package.xml  setup.py
src/navigation/config/: ekf.yaml  gz_bridge.yaml  slam_toolbox_mapping.yaml
src/navigation/launch/: localization.launch.py  mapping.launch.py  navigation.launch.py  spawnrobot.launch.py
src/navigation/maps/: my_map.pgm  my_map.yaml  my_map2.pgm  my_map2.yaml
src/rallp/: CMakeLists.txt  index.html  package.xml  setup.py  styles.css
src/rallp/config/: config2.rviz  controllers.yaml  gz_bridge.yaml  twist_mux.yaml
src/rallp/launch/: blue_dot_control.py  blue_dot_control2.py  joystick.launch.py  main_launch.launch.py  main_launch2.launch.py
src/rallp/meshes/DAE/base/: base_link.dae
src/rallp/meshes/DAE/lidar_base/: YDlidar_base.dae
src/rallp/meshes/DAE/lidar_head/: YDlidar_head.dae
src/rallp/meshes/DAE/wheel/: fl_wheel.dae  fr_wheel.dae
src/rallp/meshes/STL/base/: base_link.stl
src/rallp/meshes/STL/wheel/: fl_wheel.stl  fr_wheel.stl
src/rallp/rallp/: blue_dot_control2.py
src/rallp/urdf/: gazebo_control.xacro  lidar.xacro  rallp.urdf.xacro  rallp3.urdf
src/rallp/world/: empty.sdf  my_world.sdf  warehouse.sdf
src/rallp_torque/: Testing_Guide.md  Torque_Vectoring_Test_Execution_Guide.md  Torque_Vectoring_Test_Strategy.md  Validation_Report.md  package.xml  setup.cfg  setup.py
src/rallp_torque/config/: torque_vectoring.yaml  torque_vectoring_controllers.yaml  torque_vectoring_test_config.json
(+14 files in other folders)
