<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rallp</name>
  <version>0.0.0</version>
  <description>RallP robot package</description>
  <maintainer email="ahmed-jeljli@todo.todo">ahmed-jeljli</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>bluedot</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>robot_localization</depend>
  <depend>twist_mux</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>xacro</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>